--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            background-color: rgb(123, 161, 205);
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /*shorthand do background (cover dá errado)*/
+
+            background: rgb(123, 161, 205) url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +33,10 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit dignissimos harum, necessitatibus perferendis officiis sit, temporibus perspiciatis assumenda quibusdam consequuntur, sapiente voluptates alias corporis saepe placeat doloribus. Amet, nisi!
+        </p>
     </main>
     
 </body>
