--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td,th{
@@ -20,9 +21,31 @@
             padding: 10px;
         }
 
+        caption{
+            font-size: 1.2em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        thead >tr >th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
         thead, tfoot{
             background-color: gray;
             color: white;
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color: rgb(159, 252, 157);
+        }
+
+        tbody > tr:nth-child(even){
+            background-color: rgb(249, 164, 209);
+
         }
 
         td.num{
@@ -33,10 +56,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -57,7 +81,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>   
+                <th scope="row">Total de habitantes</th>   
                 <td class="num"><strong>84 352 783</strong></td>         
             </tr>
         </tfoot>
